# qq

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/installation_scripts/: qq-install.sh  qq-karolina-install.sh  qq-lumi-install.sh  qq-metacentrum-install.sh  qq-robox-install.sh  qq-set-scratch.sh  qq-sokar-install.sh
scripts/qq_scripts/: gmx-eta  gmx-eta.py  multi-check  multi-kill  multi-submit
scripts/run_scripts/: qq_flex_md  qq_flex_re  qq_loop_md  qq_loop_re
src/: main.py
src/qq_lib/: __init__.py  qq.py
src/qq_lib/archive/: __init__.py  archiver.py
src/qq_lib/batch/: __init__.py
src/qq_lib/cd/: __init__.py  cder.py  cli.py
src/qq_lib/clear/: __init__.py  clearer.py  cli.py
src/qq_lib/core/: __init__.py  click_format.py  common.py  config.py  error.py  error_handlers.py  field_coupling.py  logger.py  logical_paths.py  navigator.py  operator.py  repeater.py  retryer.py
src/qq_lib/go/: __init__.py  cli.py  goer.py
src/qq_lib/info/: __init__.py  cli.py  informer.py  presenter.py
src/qq_lib/jobs/: __init__.py  cli.py  presenter.py
src/qq_lib/kill/: __init__.py  cli.py  killer.py
src/qq_lib/killall/: __init__.py  cli.py
src/qq_lib/nodes/: __init__.py  cli.py  presenter.py
src/qq_lib/properties/: __init__.py  depend.py  info.py  job_type.py  loop.py  resources.py  size.py  states.py  transfer_mode.py
src/qq_lib/queues/: __init__.py  cli.py  presenter.py
src/qq_lib/respawn/: cli.py  respawner.py
src/qq_lib/run/: __init__.py  cli.py  runner.py
tests/: test_archive.py  test_batch_interface.py  test_batch_job.py  test_batch_pbs_common.py  test_batch_pbs_job.py  test_batch_pbs_node.py  test_batch_pbs_pbs.py  test_batch_pbs_queue.py  test_batch_slurm_common.py  test_batch_slurm_job.py  test_batch_slurm_node.py  test_batch_slurm_queue.py  test_batch_slurm_slurm.py  test_batch_slurmit4i_slurm.py  test_batch_slurmlumi_node.py  test_batch_slurmlumi_slurm.py  test_cd_cder.py  test_cd_cli.py  test_clear.py  test_core_click_format.py  test_core_common.py  test_core_config.py  test_core_error_handlers.py  test_core_field_coupling.py  test_core_logger.py  test_core_logical_paths.py  test_core_navigator.py  test_core_operator.py  test_core_repeater.py  test_core_retryer.py  test_go_cli.py  test_go_goer.py  test_info_cli.py  test_info_informer.py  test_info_presenter.py  test_jobs_cli.py  test_jobs_presenter.py  test_kill_cli.py  test_kill_killer.py  test_killall_cli.py  (+24 more)
themes/light_terminal/: config.toml
(+36 files in other folders)
