[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "qq"
description = "A friendly interface to batch processing"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Ladislav Bartos", email = "ladmeb@gmail.com" }]
keywords = ["batch", "processing", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "click>=8.2.1",
    "click-help-colors>=0.9.4",
    "click-option-group>=0.5.8",
    "pyyaml>=6.0.2",
    "readchar>=4.2.1",
    "rich>=14.1.0",
    "tabulate>=0.9.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://vachalab.github.io/qq-manual"
Repository = "https://github.com/VachaLab/qq"
Issues = "https://github.com/VachaLab/qq/issues"
Documentation = "https://qq.readthedocs.io/"

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "pdoc>=16.0.0",
    "pre-commit>=4.3.0",
    "pyinstaller>=6.16.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
    "snakeviz>=2.2.2",
    "ty>=0.0.34",
]


[tool.setuptools_scm]
write_to = "src/qq_lib/_version.py"

[tool.ruff]
extend-include = ["scripts/qq_scripts/*"]

[tool.ruff.lint]
extend-select = [
    "F",   # Pyflakes rules
    "W",   # PyCodeStyle warnings
    "E",   # PyCodeStyle errors
    "I",   # Sort imports properly
    "UP",  # Warn if certain things can changed due to newer Python versions
    "C4",  # Catch incorrect use of comprehensions, dict, list, etc
    "FA",  # Enforce from __future__ import annotations
    "ISC", # Good use of string concatenation
    "ICN", # Use common import conventions
    "RET", # Good return practices
    "SIM", # Common simplification rules
    "TID", # Some good import practices
    "TC",  # Enforce importing certain types in a TYPE_CHECKING block
    "PTH", # Use pathlib instead of os.path
    "NPY", # Some numpy-specific things
    "ARG", # Catch incorrect use of arguments
]
ignore = ["E501"]
